fix spacing and add modal when user comes to the page

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -38,7 +38,6 @@ body {
 
 main {
   min-height: 100vh;
-  margin-top: 55px;
 }
 
 /* Typography */
