--- a/react/src/views/Login.css
+++ b/react/src/views/Login.css
@@ -1,3 +1,3 @@
-/* .Login {
+.Login {
     margin-top: 55px;
-} */
+}
