--- a/react/src/views/admin/Offer.css
+++ b/react/src/views/admin/Offer.css
@@ -1,6 +1,6 @@
-/* .Offer {
-
-} */
+  .Offer {
+    margin-top: 55px;
+  }
 
   .Offer table {
     width: 100%;
