--- a/react/src/views/admin/OfferForm.css
+++ b/react/src/views/admin/OfferForm.css
@@ -1,3 +1,7 @@
+.OfferForm {
+    margin-top: 55px;
+}
+
 .OfferForm img {
     width: 60px;
     height: 60px;
