--- a/react/src/views/admin/Orders.css
+++ b/react/src/views/admin/Orders.css
@@ -1,6 +1,6 @@
-/* .Orders {
-    color: green;
-} */
+.Orders {
+    margin-top: 55px;
+}
 
 .Orders table {
     width: 100%;
