--- a/react/src/views/admin/ShowOrder.css
+++ b/react/src/views/admin/ShowOrder.css
@@ -1,6 +1,6 @@
-/* .ShowOrder {
-    color: yellow;
-} */
+  .ShowOrder {
+      margin-top: 55px;
+  }
 
   .ShowOrder .order {
     margin-bottom: 20px;
